--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,5 +20,15 @@ jobs:
       - name: Install dependencies
         run: composer install --no-interaction
 
+      - name: Request Zoom Credentials
+        run: |
+          read -p "Zoom account: " zoom_account
+          read -p "Zoom client: " zoom_client
+          read -p "Zoom secret: " zoom_secret
+          read -p "Meeting ID: " zoom_meeting_id
+          echo "::set-env name=ZOOM_ACCOUNT::$zoom_account"
+          echo "::set-env name=ZOOM_CLIENT::$zoom_client"
+          echo "::set-env name=ZOOM_SECRET::$zoom_secret"
+          echo "::set-env name=ZOOM_MEETING_ID::$zoom_meeting_id"
       - name: Run tests
         run: vendor/bin/phpunit
