--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,10 +22,10 @@ jobs:
 
       - name: Request Zoom Credentials
         run: |
-          read -p "Zoom account: " zoom_account
-          read -p "Zoom client: " zoom_client
-          read -p "Zoom secret: " zoom_secret
-          read -p "Meeting ID: " zoom_meeting_id
+          echo "Zoom account: " && read zoom_account
+          echo "Zoom client: " && read zoom_client
+          echo "Zoom secret: " && read zoom_secret
+          echo "Meeting ID: " && read zoom_meeting_id
           echo "::set-env name=ZOOM_ACCOUNT::$zoom_account"
           echo "::set-env name=ZOOM_CLIENT::$zoom_client"
           echo "::set-env name=ZOOM_SECRET::$zoom_secret"
